@startuml
' Class diagram for ATM

class ATM {
  - atmId : int
  - location : String
  - cashLevel : double
  + authenticate(card: Card, pin: String) : boolean
  + withdraw(card: Card, amount: double) : Transaction
  + deposit(card: Card, amount: double) : Transaction
  + transfer(from: Account, to: Account, amount: double) : Transaction
}

class Card {
  - cardNo : String
  - pinHash : String
  - status : String
}

class Account {
  - accountNo : String
  - balance : double
  + debit(amount: double) : boolean
  + credit(amount: double) : void
}

class Transaction {
  - txId : int
  - type : String
  - amount : double
  - time : DateTime
  - status : String
}

' associations (you can add multiplicities if wanted)
ATM --> Card : reads
ATM --> Transaction : creates
Card --> Account : belongsTo
Account --> Transaction : records

@enduml
